# hdc-colors

./: .gitignore  .pylintrc  MANIFEST.in  README.md  color_ramps.md  dev-env.yml  developer.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: conda.yaml  main.yaml  main.yml  publish-s3.yaml
conda/: Makefile  README.md  build-env.yaml  build-env.yml
conda/recipe/: meta.yaml
hdc/colors/: __init__.py  _classes.py  _version.py  hazards.py  rainfall.py  temperature.py  types.py  ui.py  utils.py  vegetation.py
hdc/colors/cli/: __init__.py  create_ctable.py  table.py
scripts/: generate-color-md.py  render-simple-index.awk
tests/: conftest.py  test-env-py39.yml  test__classes.py  test_ui.py  test_utils.py
