[project]
name = "hdc-colors"
requires-python = ">=3.10"
dynamic = ["version"]
description = "Color definitions for the Humanitarian Data Cube"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "numpy>=2.2.6",
]

[project.urls]
Issues = "https://github.com/WFP-VAM/hdc-colors/issues/"

[project.scripts]
hdc-colors-table = "hdc.colors.cli.table:cli[ui]"
hdc-colors-create-ctable = "hdc.colors.cli.create_ctable:cli"

[project.optional-dependencies]
ui = [
    "click>=8.3.1",
    "rich>=14.2.0",
]
mpl = [
    "matplotlib>=3.10.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "hdc/colors/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["hdc"]

[tool.ruff]
line-length = 105
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "D",      # pydocstyle
    "UP",     # pyupgrade
    "PL",     # pylint
    "RUF",    # ruff-specific rules
]
ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D203",   # 1 blank line required before class docstring (conflicts with D211)
    "D213",   # Multi-line docstring summary should start at the second line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D",      # Don't require docstrings in tests
    "PLR2004", # Magic value used in comparison
    "E741",   # Ambiguous variable name (e.g., `l` for lambda)
    "N803",   # Argument name should be lowercase
    "N806",   # Variable in function should be lowercase
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments
    "PLR0915",  # Too many statements
    "PLC0415", # Import at the top-level
]

"hdc/colors/cli/table.py" = [
    "PLR0915", # Too many statements (CLI function)
]
"hdc/colors/ui.py" = [
    "PLR0915", # Too many statements (table generation functions)
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"  # or "google" or "pep257" - adjust based on your preference

[tool.ruff.lint.pylint]
max-args = 10  # Maximum number of arguments in function definition
max-statements = 8  # Maximum number of statements in function

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.11",
]
