[metadata]
name = hdc-colors
description = Color definitions for HDC data
version = attr: hdc.colors._version.__version__
author = WFP-VAM
author_email =
maintainer = WFP-VAM
maintainer_email =
long_description_content_type = text/markdown
long_description = file: README.md
platforms = any
license = MIT License
url = https://github.com/WFP-VAM/hdc-colors/
project_urls =
   Documentation = https://hdc-colors.readthedocs.io/en/latest/
   Bug Reporting = https://github.com/WFP-VAM/hdc-colors/issues

classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Development Status :: 2 - Pre-Alpha
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Natural Language :: English
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: GIS

[options]
python_requires = >=3.8
include_package_data = false
zip_safe = false
packages = find_namespace:
install_requires =
  matplotlib

[options.extras_require]
test =
    pytest

ui = 
  rich
  click

all =
    %(ui)s

[options.packages.find]
include =
  hdc*

[options.entry_points]
console_scripts =
  hdc-colors-table = hdc.colors.cli.table:cli [ui]

[aliases]
# Define setup.py command aliases here
test = pytest
